feat: image meta

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMPHNEN - Ingin Menjadi Programmer Handal Namun Enggan Ngoding</title>
-    <meta name="description" content="Besok ajah">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet">
+    <meta name="description" content="IMPHNEN (Ingin Menjadi Programmer Handal Namun Enggan Ngoding) adalah komunitas yang lahir dari keresahan bersama. Kenapa harus ngoding kalau bisa rebahan dan scroll fesnuk?">
+    <!-- Open Graph meta tags for social sharing -->
+    <meta property="og:image" content="/static/banner.png">
+    <meta property="og:image:alt" content="IMPHNEN Banner">
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="/static/banner.png">
   </head>
   <body>
     <div id="app"></div>
